crates/toml_edit/tests/snapshots/invalid/key/duplicate-keys-06.stderr
TOML parse error at line 2, column 1
  |
2 | "a\u0027b" = 2
  | ^^^^^^^^^^
duplicate key
